Corrected link on contact in footer. Swap the position of contact with quick links. Added three more members in the team section. Same contact form on every page where it was. On the homepage, prices are removed in the Services section. Scrollbar designed as theme color. Added model on every services button on the homepage Added border on portfolio grid Added all countries name and codes in the contact form.
Sitemap page were not designed in the figma file. So, i’ve designed it on my own

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
