--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.2",
+    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "zod": "^3.25.72"
@@ -29,6 +31,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
