--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.2",
+    "react-router-sitemap": "^1.2.0",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
