--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vite-plugin-sitemap": "^0.8.2"
+    "vite": "^6.3.5"
   }
 }
