V3 on whole web

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_WEB3FORMS_ACCESS_KEY=f93b9872-9612-4a8f-ad5f-f7adb8fdc3c6
 VITE_RECAPTCHA_SITE_KEY="6Ld21HkrAAAAAH6Bc5HXufcNIPunK-ofBQg6vrSP"
+
+
+# Add your new v3 site key
+VITE_RECAPTCHA_V3_SITE_KEY="6LePDIUrAAAAAOWvdyUixzIIExDLf3yPBDK7yWAy"
