--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_WEB3FORMS_ACCESS_KEY=f93b9872-9612-4a8f-ad5f-f7adb8fdc3c6
+
 VITE_RECAPTCHA_SITE_KEY="6Ld21HkrAAAAAH6Bc5HXufcNIPunK-ofBQg6vrSP"
+
+VITE_RECAPTCHA_V3_SITE_KEY="6LfOuIgrAAAAAGV38ZYOJ2kDBTu5iwapBl_cgNc8"
