--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.2",
     "sweetalert2": "^11.6.13",
